tdf#93724 KeySet insert: properly set default values: NULL & right type

Change-Id: I933eed918e18b6923d4e0d24748297cf0dd0088d
Reviewed-on: https://gerrit.libreoffice.org/19651
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>